# polymarket-watcher

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-03-01-multi-watch-api-cli-design.md  2026-03-01-multi-watch-api-cli.md  2026-03-01-polymarket-watcher-mvp-design.md  2026-03-01-polymarket-watcher-mvp.md
src/polymarket_watcher/: __init__.py  __main__.py  api.py  cli.py  config.py  db.py  main.py  schema.sql
src/polymarket_watcher/engine/: __init__.py  brier.py  live_pf.py  pf_backtest.py
src/polymarket_watcher/ingestion/: __init__.py  clob.py  gamma.py  wss.py
src/polymarket_watcher/models/: __init__.py  brier.py  particle_filter.py
tests/: test_api.py  test_brier_job.py  test_cli.py  test_clob.py  test_config.py  test_db.py  test_gamma.py  test_live_pf.py  test_pf_backtest.py  test_wss.py
